# Grid-Point-Code

./: .gitignore  .travis.yml  README.md
csharp/: .editorconfig  README.md  csharp.sln
csharp/gpc/: GPC.cs  gpc.csproj
csharp/gpc.tests/: TestGPC.cs  gpc.tests.csproj
java/: .project  README.md  pom.xml
java/src/main/java/ca/pranavpatel/algo/gridpointcode/: Coordinates.java  GPC.java  Validation.java
java/src/main/java/ninja/pranav/algorithms/gridpointcode/: Coordinates.java  GPC.java  Validation.java
java/src/test/java/ca/pranavpatel/algo/gridpointcode/: GPCTest.java
java/src/test/java/ninja/pranav/algorithms/gridpointcode/: GPCTest.java
python/: README.md  pyproject.toml
python/src/gpc_algo_pranavpatel_ca/: __init__.py
python/src/gridpointcode_algo_pranavpatel_ca/: gpc.py
python/tests/: __init__.py  test_gpc.py
typescript/: .editorconfig  README.md  package-lock.json  package.json
typescript/src/: GPC.ts  index.ts
typescript/test/: GPS.test.ts
